# robotsix-http

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: modules.yaml
src/robotsix_http/: __init__.py  client.py  retry.py
tests/: test_client.py  test_retry.py  test_version.py
