[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "robotsix-http"
dynamic = ["version"]
description = "Shared HTTP retry/backoff library for the robotsix ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["robotsix", "http", "retry", "backoff"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7",
    "ruff>=0.11",
    "mypy>=1.15",
    "deptry>=0.23",
]

[tool.coverage.run]
source = ["robotsix_http"]
branch = true
relative_files = true

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.deptry.per_rule_ignores]
DEP002 = ["httpx"]
DEP003 = ["robotsix_http"]
